# RAG-Anything-main

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE.md  README.md  README_OFFLINE.md  env.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
chatgpt_pipeline_review_package/: README_FOR_CHATGPT.md  README_REPO.md  pyproject.toml
chatgpt_pipeline_review_package/raganything/: __init__.py  batch_parser.py  cli.py  parser.py  processor.py  utils.py
chatgpt_pipeline_review_package/raganything/genealogy/: __init__.py  claim_extraction.py  json_utils.py  living_graph.py  mentions.py  models.py  normalize.py  pipeline.py  query_resolution.py  rag_index.py  results.py  retrieval.py
chatgpt_pipeline_review_package/tests/: test_batch_parser.py  test_cli.py
chatgpt_pipeline_review_package/tests/fixtures/: sample_content_list.json  sample_living_graph.json
docs/: ARCHITECTURE.md  LOCAL_FIRST.md  NEXT_PROMPTS.md  ROADMAP.md
examples/: lmstudio_integration_example.py
raganything/: __init__.py  batch_parser.py  cli.py  enhanced_markdown.py  modalprocessors.py  offline.py  parser.py  raganything.py
raganything/genealogy/: __init__.py  build.py  claim_extraction.py  export.py  extractors.py  json_utils.py  knowledge_graph.py  living_graph.py  llm_claim_extraction.py  mentions.py  models.py  name_normalization.py  normalize.py  pipeline.py  rag_index.py  resolution.py  retrieval.py  stores.py
scripts/: build_living_graph_from_pdf.sh  family_tree_pipeline.py  filter_living_graph_for_tree.py  genealogy_build.py  genealogy_plan_ollama.py  living_graph_pipeline.py  plan_ollama.py  raganything_cli.py  rebuild_living_graph_stage4.py  run_install_min.sh  run_living_graph_prepared.sh  run_plan_hq_ollama.sh  run_plan_smoke_ollama.sh
tests/: test_cli.py  test_context_extractor_cache.py  test_genealogy_claim_quality_gate.py  test_genealogy_modules.py  test_genealogy_pipeline.py  test_lazy_imports.py  test_name_normalization.py  test_processor_doc_id.py  test_repo_hygiene.py
