[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genealogy-rag-core"
dynamic = ["version"]
description = "Local-first genealogy extraction and RAG core for private family-history books"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "pepebubaboy-ops" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
genealogy-rag = "raganything.cli:main"
raganything = "raganything.cli:main"

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "json-repair>=0.30.0",
]
neo4j = [
    "neo4j>=5.0.0",
]
mineru = [
    "mineru[core]",
]
image = [
    "Pillow>=10.0.0",
]
text = [
    "reportlab>=4.0.0",
]
markdown = [
    "markdown>=3.4.0",
    "weasyprint>=60.0",
    "pygments>=2.10.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "ruff>=0.6.4",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "openai>=1.0.0",
    "json-repair>=0.30.0",
]
all = [
    "openai>=1.0.0",
    "json-repair>=0.30.0",
    "neo4j>=5.0.0",
    "mineru[core]",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "markdown>=3.4.0",
    "weasyprint>=60.0",
    "pygments>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/pepebubaboy-ops/RAG-Anything-main"
Repository = "https://github.com/pepebubaboy-ops/RAG-Anything-main"
Issues = "https://github.com/pepebubaboy-ops/RAG-Anything-main/issues"

[tool.setuptools.packages.find]
include = ["raganything*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "raganything.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 88
